<resources>
    <string name="app_name">PushUpsWithAI</string>
    <string name="grant_permission">Please, granted permission.</string>
    <string name="splash_title_push">PUSH\u0020</string>
    <string name="splash_title_ups">UPS</string>
    <string name="week_title">Неделя %s</string>
    <string name="day_title">День %s-й </string>
    <string name="training_description">%s подход - %s отжимания\n</string>
    <string name="tab_easy_level">Новичок</string>
    <string name="tab_medium_level">Средний</string>
    <string name="tab_hard_level">Продвинутый</string>
    <string name="camera_screen_title">Автоматический подсчет упражнений.</string>
    <string name="camera_screen_description">Вы делаете упражнения, а приложение с помощью компьютерного зрения подсчитает всё за вас.</string>
    <string name="button_next">Далее</string>
    <string name="tutorial_push_up">Перед началом необходимо определить ваш уровень подготовки. Для этого отожмитесь от пола столько раз, сколько сможете.
        Если вы выполнили до 5 отжиманий, то ваш уровень «Новичок». Если 6–10 отжиманий, то «Средний». Если 11–20, то уровень «Продвинутый».</string>
    <string name="complete">Выполнить</string>
    <string name="rest_day_title">Можно отдохнуть!</string>
    <string name="rest_day_description">Вашим мышцам нужно время восстановиться.</string>
    <string name="start">Начать</string>
    <string name="next">Продолжить</string>
    <string name="push_ups">Отжимания</string>
    <string name="incrementer_pattern">%s.</string>
    <string name="count_pattern">x%S</string>
    <string name="preparation_title">Выполните упражнение</string>
    <string name="end_title">Поздравляем!</string>
    <string name="end_description">Сегодня вы сделали %s отжиманий.</string>
</resources>