<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.restscreen.RestDayFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/rest_day_title"
            android:textColor="@color/blue_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:text="@string/rest_day_description"
            android:textColor="@color/blue_light"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_rest"
        app:tint="@color/blue_middle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComplete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="40dp"
        android:background="@drawable/training_and_rest_active_item_bg"
        android:fontFamily="@font/ubuntu_regular"
        android:stateListAnimator="@null"
        android:text="@string/complete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</FrameLayout>